--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,11 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ukize233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ukize233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ukize233/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ukize233/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ukize233/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ukize233/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11746968.md#1" target="_blank">动物收容所让流浪狗挑礼物 狗狗神情融化人心</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11746968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/52e05eb67cf48e134fa55dde6cfe75a7-150x120.jpg" align ="left"></a>圣誔节是个欢乐的日子，动物庇护所收留很多只曾经被遗弃的流浪狗，他们认为住在那里的狗狗也一样要得到一份圣誔节礼物；挑选礼物的时间到了，从视频中可以从狗狗们快乐的神情中看到另一种融化人心的圣誔气息！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747071.md#1" target="_blank">记得出生后的每一刻 澳洲女出书分享超强记忆力</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1e5aa34c37c3f4184d9127e6776eab22-150x120.jpg" align ="left"></a>我们大都希望自己记忆力好一点，不过一位澳洲女子倒希望自己能忘事。29岁的夏洛克记得从出生到现在身边发生过的每一件事情和细节。她日前出书，写下了自己的超记忆；来看看似乎是令人称羡的超记忆，为何变成夏洛克无法摆脱的魔咒呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/25/n11745018.md#1" target="_blank">逃脱专家 聪明狗“用舌头解开门锁” 只花了8秒</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/25/n11745018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/17c6214c0ac749edb0638df04ee7813b-150x120.jpg" align ="left"></a>为了不喜欢被限制行动，聪明竉物们各显有趣的奇招；目前被饲养在美国科罗拉多州的一家兽医院里面的一只狗狗可是个逃脱专家，它用自己独门利器—“舌头”解开门锁，前后只花了8秒钟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:12 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/25/n11745079.md#1" target="_blank">5岁女孩人小志不小 义卖替123同学付午餐费</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/25/n11745079.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d2e5569cc038ecdcfa3aa3c71fea06a5-150x120.png" align ="left"></a>一个5岁的女孩做了最甜蜜的事，她帮助付不出钱的同学还清午餐债务。她摆摊义卖自己手工做的饼乾和热巧克力，募集80美元，用这笔钱偿还了123名学生的学校午餐债务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 7:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747694.md#1" target="_blank">古代中医有好用的“安眠药” 助眠又养生</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/insomnia-chinese-medicine-1226-150x120.jpg" align ="left"></a>失眠的人们，往往求助于西医的安眠药。其实在中国古代，就有非常好用的“安眠药”。中医看失眠原因是“阳不入阴” 有三种情况。古人也会失眠，他们使用的“安眠药方”有哪些？这些方子又适合什么样的人吃？1. 半夏秫米汤——最早的安眠药。2. 黄连阿胶汤——对抗生病造成的失眠。3. 天王补心丹——对抗耗脑、忧思过度失眠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 3:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748440.md#1" target="_blank">沉迷于深夜线上购物  或成另一种睡眠障碍</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748440.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_512452012-150x120.jpg" align ="left"></a>调查发现，深夜徘徊在线上商店的人比想像中更多，这俨然已成为一种全新的睡眠障碍。并且，购物者不分男女老少，就连婴儿潮世代的长者，也有高达58％的人会在深夜购物。更有31％的人曾忘记在睡前买了什么？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 2:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748489.md#1" target="_blank">从401k退休金账户借款好吗？专家：弊多于利</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/01/1201200555201012-150x120.jpg" align ="left"></a>随着现代社会人类寿命的延长，我们会越来越依靠延迟退休年龄或者多储备退休金来度过老年生活。那么在最能挣钱的黄金年龄，用养老金来偿还贷款或满足消费需求，实在是一种不明智的选择。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748138.md#1" target="_blank">来自大海的美味 贝类安全料理指南</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748138.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_42951300_Subscription_L-150x120.jpg" align ="left"></a>贝类的饱和脂肪含量低，却富含omega-3脂肪酸，与陆地上难以取得的矿物质，是值得每周吃一次的“海味”。然而，近年来贝类食物中毒案件暴增，让许多人对贝类望之却步。其实，只要在购买、储存、烹调时，注意一些安全原则，贝类仍可以是人们健康饮食的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748302.md#1" target="_blank">UPS司机超敬业 趴在滑冰上奋力送货到府</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/27/n11748302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-901229624-150x120.jpg" align ="left"></a>美国优比速公司（UPS）一名送货司机在很容易滑倒的薄冰上，用尽全力将包裹送到客户手中，即便全身滑倒在地上也在所不辞。不少网民称赞他非常敬业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747541.md#1" target="_blank">【胡乃文开讲】青壮年“过劳死”危机  紧急时刻1穴位救命</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/26/n11747541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Worked-to-death2-1226-150x120.jpg" align ="left"></a>近年来，青壮年过劳死的案例越来越多。当一个人心跳、呼吸紊乱的时候，如果立刻按一个穴位，也许就能抢救自己的命。阳溪穴帮助你腹式呼吸，立刻舒缓神经紧张，阳溪穴也有急救功效。过劳死一词源自日文，意思是职业性突然死亡。因为工作过度积劳成疾，造成心脏病发作或者脑内血液供应突然出问题。如何缓解过劳？中医有没有过劳死的说法？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 4:12 AM			</td></tr>
@@ -33,5 +26,20 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738522.md#1" target="_blank">组图：2019年可爱动物图片精选</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738522.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912230224181758-150x120.jpg" align ="left"></a>动物是人类最亲蜜的朋友，为人类心灵带来慰藉，有它们的相伴，生命变得多彩。在此岁末之际，精选几帧可爱动物图片供读者欣赏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11740662.md#1" target="_blank">不舍好友被埋葬 狗狗用爪子拨开土 主人看得哭了</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11740662.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d3ae6caf14322503843c542d9b78a17f-150x120.jpg" align ="left"></a>这只狗狗不能理解什么叫死亡，无法接受朋友去世这个悲伤的事实。在视频中，一只棕色的狗狗试图要从坟墓坑里把朋友叫起来，不断地用它的爪子将土拨开，不想让自己的好友被土掩埋，看得主人一家都哭了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11740687.md#1" target="_blank">冲浪选手救落海对手 总统感谢选择人性 放弃金牌</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11740687.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1280px-2010_mavericks_competition-150x120.jpg" align ="left"></a>在一场激烈的 冲浪比赛中，已进入冠军争夺战中，出现了无比暖心的一幕！一名菲律宾冲浪选手不顾比赛，转身去救一名印尼的竞争对手。影片在网路热传，也让印尼总统佐科威（Jokowi）在推特发文，感谢他愿意选择人性，放弃金牌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:06 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/21/n11737135.md#1" target="_blank">恩爱80年世界最长寿夫妻 现代婚姻榜样</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/21/n11737135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4406b1e0f6335db7f721f5705cc380dd-150x120.png" align ="left"></a>美国德州一对被吉尼斯世界纪录评为“世界最长寿的夫妻”，正在庆祝他们的80周年结婚纪念日，不但亲朋好友共襄盛举参与庆祝活动，媒体也争相报导他们的故事；这对夫妻除了证实真爱可以持续一生外，也要向世人分享幸福与长寿的秘诀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741025.md#1" target="_blank">为居家添新装 2020年室内色彩趋势分析</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_717804457-150x120.jpg" align ="left"></a>油漆是让屋子改头换面最简单的方式了！只要帮墙壁漆上新颜色，就能用一点小钱创造惊人的改变。如果，你最近正打算挑选家中的新色调，别错过专家们对2020年室内设计的色彩趋势分析，让这些美丽的色彩，激发你的灵感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:15 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11741995.md#1" target="_blank">月经腹痛难忍？2招“痛经缓解操”活血消疼痛</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11741995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Dysmenorrhea0-1224-150x120.jpg" align ="left"></a>常言道“十女九寒”，女性若有宫寒，尤其容易引起痛经问题。中医科学院研究生院教授杨力教你2招“痛经缓解操”，帮助活血化淤、缓解疼痛。
+
+宫寒的女性应适当加强运动。一般来说，宫寒者偏于安静沉稳，中医认为“动则生阳”，每周需做三～四次“痛经缓解操”来增加阳气。另外，也可以利用有氧运动，如快走、游泳、慢跑等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11741825.md#1" target="_blank">圣诞玩具被偷 美警局发现窃贼竟是自家狗</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/24/n11741825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-511711926-150x120.jpg" align ="left"></a>美国麻萨诸塞州富兰克林警察局（Franklin Police Department）内的圣诞玩具近来频频失踪，该局警员经追查后当场逮到现行犯正在行窃玩具，而这个窃贼竟是该局所饲养的一只小狗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741393.md#1" target="_blank">悉尼渔市场海鲜马拉松“开跑”料吸引10万人</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741393.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1310219-150x120.jpg" align ="left"></a>12月23日，悉尼鱼市场一年一度的海鲜马拉松又开始了！从当日清晨5点开始，鱼市场的店铺将会通宵营业，直到第二天平安夜的下午5点，连续36个小时。
+
+悉尼鱼市场是南半球最大规模的鱼市场，出售100多种海鲜。连续举办了24年的海鲜马拉松，已经成为了悉尼圣诞节的一个特色传统，也是鱼市场一年中最繁忙的日子。
+
+
+
+.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 7:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11740975.md#1" target="_blank">饮食影响你的情绪！这样调整饮食 3周改善忧郁</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11740975.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/depression-food_1510180346-150x120.jpg" align ="left"></a>摄取过量加工、高糖或高脂肪食品，不仅会增加三高风险，还会增加忧郁情绪。澳洲麦觉理大学最新研究发现，只要调整饮食习惯，可在3周内改善忧郁症。改吃蔬果、瘦肉3周改善忧郁。受试者每天吃3份全麦谷物、5份蔬菜、2到3份水果，以及3份瘦肉、鸡蛋、豆腐或豆类，与2汤匙橄榄油。研究发现，他们的忧郁情绪有了很大改善。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:50 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741015.md#1" target="_blank">感冒喉咙痛总是不好？三大中药方止痛</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11741015.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/sore-throat-chinese-medicine_128287085-150x120.jpg" align ="left"></a>有人一感冒就喉咙痛，其他的症状或许不明显，就喉咙痛老是好不了，怎么办？感冒引发的喉咙痛，大部分是风热外袭，火毒上攻。可出现的症状包括咽部疼痛逐渐加重，吞咽或咳嗽时疼痛加剧；而且咽部红肿，伴见发热恶风、头痛、咳嗽痰黄、舌质红、苔黄。此时应疏风清热，消肿利咽，方剂首选银翘散。治疗感冒喉咙痛的三大中药方：1. 银翘散......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 12:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/news2008_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news2008_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ukize233/djy/blob/master/gb/news2008_5.md#1<br><a href="https://github.com/ukize233/djy/blob/master/gb/news2008_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ukize233/djy/blob/master/gb/news2008_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_5.htm">http://www.epochtimes.com/gb/news2008_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
