--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ukize233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ukize233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780383.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/191006-N-VI515-0396-600x400-1-320x200.jpg">【新闻看点】美击杀苏莱曼尼 陆民：让领导先走</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780639.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/08/PO_X6757-320x200.jpg">【专访】台北议员苗博雅：大选预测及中共渗透（上）</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
@@ -9,6 +9,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780521.md#1">周晓辉：川普暂停对伊军事行动与刘鹤将赴美</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780429.md#1">【名家专栏】美国公民教育与对未来的希望</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780425.md#1">颜丹：“安全”成上海特质多讽刺</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11778044.md#1">【名家专栏】FBI应为滥用外国情报监视法负责</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777757.md#1">张菁：大陆离婚率高启 半边天思想是根源</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760806.md#1">为中共效力的红色特工 后来怎么样了（3）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776387.md#1">陈思敏：中共造牛市 脑筋动到居民储蓄</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776272.md#1">文静：铁蹄下“岁月静好”吗？</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,6 +30,8 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780549.md#1">【热点互动】伊朗放空枪 川普得分 中共失望？</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780383.md#1">【新闻看点】美杀苏莱曼尼 陆民赞：让领导先走</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780590.md#1">反送中名人王婆婆被送押深圳：看守所如地狱</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780497.md#1">刘鹤访美将签初步协议 川普：第二阶段将启</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780408.md#1">骆惠宁见深圳四高层和林郑 泄中共对港政策</a><br>
@@ -40,8 +42,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778994.md#1">组图：台湾大选倒计时 候选人全力冲刺</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779864.md#1">脱贫率超99.99%？江苏“脱贫神话”遭质疑</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778360.md#1">【翻墙必看】两神秘人对王立强发死亡威胁</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11778636.md#1">【专访】台立委黄国昌：中共渗透威胁多严重</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779545.md#1">年幼时逃离伊朗 美军航母舰长现被派至中东</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777696.md#1">美专家：北京可能成为台湾选举大输家</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780211.md#1">前北约秘书长：台湾大选是中共资讯战演习场</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779645.md#1">2019年 近万名法轮功学员被绑架骚扰</a><br>
