--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,6 +22,7 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768216.md#1" target="_blank">廖祖笙：2020年或为暴政收官年</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768216.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1506272237202039-560x400-150x120.jpg" align ="left"></a>习近平先生，你说“2020年是全面建成小康社会和‘十三五’规划圆满收官之年”，这不但让人无法苟同，而且有越来越多的迹象在表明，2020年或为暴政收官年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:41 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768270.md#1" target="_blank">隋志：善恶有报是天理 只论来早与来迟</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/95d4b9ee87d4abf9229f27be738525d0-600x400-150x120.jpg" align ="left"></a>据明慧网信息统计，二零一九年中共至少冤判789名法轮功学员，非法庭审851场，非法抓捕435人，构陷到检察院、法院1137人，警察对309名被非法判刑的法轮功学员敲诈勒索现金4037830元。在中共迫害法轮功长达二十年之后的今天，它仍不遗余力地对无辜民众加剧迫害，制造出许许多多的妻离子散、家破人亡的冤案。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 5:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768074.md#1" target="_blank">周晓辉：更换中联办主任 中南海仍避重就轻</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768074.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/180423090812100484-600x400-1-150x120.jpg" align ="left"></a>迄今为止，北京对此都不愿回应港人的要求，任命骆惠宁任新中联办主任也是避重就轻，而这样的任命大概除了让最高层更多了解香港真实信息外，也让港人依旧会持续抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:40 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773166.md#1" target="_blank">项云：无视人性准则是中共党性决定的</a><br></h3>安居乐业天然拒绝暴力生活是人本性的自然追求，由此产生的丰富多彩文化和娱乐也是自然而然；由此生产和生活中发生的各种人际关系规则也必然要相互共识，普世价值也必是人性光辉体现。所以信守各种承诺也是人性自然体现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 6:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/1/n11760382.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（13）</a><br></h3>我们能够认识的这个世界，比照眼睛观察到的事物，可以做这样一个描述：有一个一个可分辨出的物体，这些物体之间有一些间隙，可以插入很多同样的物体。有一定数目的相同或类似物体同时存在。一个物体一般会有可分辨的边界，边界内物质凝实，边界外没有同样物质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 7:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11770894.md#1" target="_blank">袁斌：中共删帖封号有多疯狂？</a><br></h3>在中共筑起的防火墙内，文网越来越严，删帖封号越来越疯狂，这是众所周知的事。但若问究竟严到何等程度，疯狂到什么地步，许多人恐怕就知道的不是那么全面和具体了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11770813.md#1" target="_blank">伍新：红朝总理令怎总不灵？</a><br></h3>户口滥销要恢复，见人理当纠错误。
@@ -68,9 +69,5 @@
 没治喽，中共党，神医妙手难还阳。
 黄泉路上怨哪个？自打自倒果自尝。
 识时务者为俊杰，倒.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:53 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768204.md#1" target="_blank">云鹤天：《七律?冬云》新解</a><br></h3>黑色天鹅漫天飞，
-犀牛成群皮毛灰。
-四面楚歌声声急，
-天灭中共号角吹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ukize233/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/ukize233/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ukize233/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
