--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -37,13 +37,7 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank">安全担忧 美陆军紧随海军禁用TikTok</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758321.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg" align ="left"></a>抖音国际版TikTok正在引起越来越多的安全隐患，在美国海军于半个前做出禁用该应用程序的相关规定后，美国陆军也迅速做出反应：禁止其士兵这个正在青少年中流行的短视频应用程序，以免带来安全问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11756072.md#1" target="_blank">中共利用升旗仪式欲染红费城 华人斥荒唐</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/30/n11756072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-964629332-150x120.jpg" align ="left"></a>中共利用美国宪法诞生地费城支持多元文化的政策，数次举行升旗仪式，并称其为“红色延安”。对此，费城市政府反对，当地华人斥其荒唐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758277.md#1" target="_blank">中共统战渗透台湾 六大手段</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11758277.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/0a106b7cff838d0e5159f2ab627f3e9a-600x400-150x120.jpg" align ="left"></a>中共统战台湾手法大曝光！本报整理，中共为对台达到“促统”目标，透过指示、委托及资助国人，对台进行各式统战渗透活动。包括介入台湾选举及公民投票、游说及施压台湾政府政策、提供统促党政治献金及妨害合法集会游行等五大手法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 12:21 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11756804.md#1" target="_blank">【翻墙必看】新年之际武汉惊传SARS疫情</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/19/12/31/n11756804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/05/60517053558868-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.传武汉爆发SARS疫情 已有7例病情危重
-湖北武汉市卫生部门30日晚，公布一则紧急通告，称在当地的海鲜市场陆续出现“不明原因的肺炎”。该通知在网路上疯传，武汉疑似爆发非典型肺炎冠状病毒（SARS）群聚感染，已经有7宗感染病例。
-
-2.中共外交辞令出尽丑 “耿爽模拟器”被下架
-中国外交部发言人耿爽的对外发.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 9:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11765081.md#1" target="_blank">中国工程院院士李宁涉贪被判刑12年</a><br></h3>中国工程院院士、中国农业大学生物学院教授李宁及张磊贪污案于1月3日宣判，李宁被判刑12年，张磊被判刑5年8个月。李宁、张磊被指贪污数额为3410万余元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 3:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11764759.md#1" target="_blank">涉权色交易私藏枪支 长沙银行前副行长被双开</a><br></h3>1月3日，湖南长沙银行前党委委员、副行长孟钢被双开，他被指搞权色交易、私藏枪支等罪名。
 
 据通报，孟钢涉收受巨额财物品、持有上市公司股份、搞权色交易，私藏枪支等违规违法行为，孟钢构成职务违法并涉嫌受贿犯罪。
