--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ukize233/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ukize233/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ukize233/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ukize233/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ukize233/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780385.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-320x200.jpg">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780767.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/09/yaominhuang_meitu_1-320x200.jpg">黄耀明悼念大卫?鲍伊 宣布达明一派3月开唱</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/5/n11770292.md#1">苏州十全街发生大面积塌陷 店铺已搬空</a><br>
@@ -33,6 +33,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780832.md#1">假货太多 大陆现“山寨手机品牌排行榜”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780506.md#1">中南海大秘：中共高层心灰意懒 出工不出力</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775163.md#1">中共对川普态度大变的背后</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780385.md#1">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780594.md#1">大陆“免裁券”闹剧 民众：别拿裁员开玩笑</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780521.md#1">周晓辉：川普暂停对伊军事行动与刘鹤将赴美</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780639.md#1">【专访】台北议员苗博雅：大选预测及中共渗透（上）</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780383.md#1">【新闻看点】美杀苏莱曼尼 陆民赞：让领导先走</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11771208.md#1">大陆网红李子柒背后的“中国故事”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780590.md#1">反送中名人王婆婆被送押深圳：看守所如地狱</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780372.md#1">乌航坠机 美官员：或遭伊朗防空导弹误击</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780860.md#1">辽宁公安厅官落马 曾被举报当涉黑保护伞</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779986.md#1">美议员：台湾应透过选举对中共说“不”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br>
