--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -42,7 +42,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780549.md#1">【热点互动】伊朗放空枪 川普得分 中共失望？</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780497.md#1">刘鹤访美将签初步协议 川普：第二阶段将启</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780383.md#1">【新闻看点】美杀苏莱曼尼 陆民赞：让领导先走</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆三男当街绑架访民 同伴三人被警方带走</a><br>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 同伴三人被警方带走</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781156.md#1">一晚做8套试题 湖南小学生出现精神异常</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780860.md#1">辽宁公安厅官落马 曾被举报当涉黑保护伞</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11779986.md#1">美议员：台湾应透过选举对中共说“不”</a><br>
