--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781626.md#1">石铭：中共迫害无辜老人 丧尽天良</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781128.md#1">袁斌：伊朗上演复仇戏 中共党媒失望</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780728.md#1">王友群：天灾人祸不断伊朗报复美国难</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780521.md#1">周晓辉：川普暂停对伊军事行动与刘鹤将赴美</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/22/n11738121.md#1">【思想领袖】戴耀廷：香港抗议者的智慧（上）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777961.md#1">王友群：中共利用伊朗问题煽风点火真相透视</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777869.md#1">周晓辉：伊朗报复美国雷声大 中俄动作频频</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11777810.md#1">颜丹：人均一万美元与人手一张选票的价值</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
@@ -30,13 +30,13 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播预告】决战2020 台湾总统选前之夜</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781366.md#1">受贿额巨大 吉林女厅官翟宪枝获刑20年</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781408.md#1">【独家】专访郑文杰: 被虐待至精神崩溃（三）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781301.md#1">【专访】台立委王定宇：王立强案新内幕（上）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781257.md#1">分析：王志民任新职 未必安全着陆</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781258.md#1">亲属遭中共骚扰 郑文杰宣布与家属断绝关系</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11780977.md#1">视频：乌航客机疑被伊朗导弹击中瞬间</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播预告】决战2020 台湾总统大选</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780832.md#1">假货太多 大陆现“山寨手机品牌排行榜”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780506.md#1">中南海大秘：中共高层心灰意懒 出工不出力</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775163.md#1">中共对川普态度大变的背后</a><br>
